# Ollama

./: README.md  main.py  pyproject.toml
