[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["kirannambiar12 <kirannambiar12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
black = "^24.10.0"
requests = "^2.32.3"
ollama = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
